--- a/text_mining.ipynb
+++ b/text_mining.ipynb
@@ -10,20 +10,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "92c89a09",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "import json\n",
     "import string\n",
-    "import os\n",
+    "import numpy as np\n",
     "import pandas as pd\n",
     "from wordcloud import WordCloud\n",
-    "from matplotlib import pyplot as plt\n",
+    "from nltk.util import ngrams\n",
     "from nltk.stem import PorterStemmer\n",
+    "from matplotlib import pyplot as plt\n",
     "from nltk.tokenize import word_tokenize\n",
+    "from scipy.cluster.hierarchy import dendrogram\n",
+    "from sklearn.cluster import AgglomerativeClustering\n",
     "from nltk.corpus import PlaintextCorpusReader, stopwords\n",
+    "from sklearn.decomposition import LatentDirichletAllocation, NMF\n",
+    "from sklearn.metrics.pairwise import cosine_similarity, euclidean_distances\n",
     "from sklearn.feature_extraction.text import CountVectorizer, TfidfVectorizer"
    ]
   },
@@ -188,6 +194,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "7b825b3c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tv = TfidfVectorizer()\n",
+    "matrix_tfidf = tv.fit_transform(docs['content'])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "1fa6c067",
    "metadata": {},
@@ -294,14 +311,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "52b2d1cd",
    "metadata": {},
    "outputs": [],
    "source": [
     "def plot_documents(model, matrix, n_topics, title):\n",
     "    colors =['papayawhip','goldenrod', 'darkkhaki', 'olivedrab', 'ivory', 'cyan', 'thistle', 'indigo', 'lightcoral', 'dimgrey']\n",
-    "    docs_topics = pd.DataFrame(model.transform(matrix), colums=[f'Topic {x}' for x in range(n_topics)])\n",
+    "    docs_topics = pd.DataFrame(model.transform(matrix), columns=[f'Topic {x}' for x in range(n_topics)])\n",
     "    docs_topics.index = [file_name.replace('.txt','') for file_name in files_names]\n",
     "    plt.figure(figsize=(7,4))\n",
     "    left = [0] *len(docs_topics)\n",
@@ -314,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "b0c1f357",
    "metadata": {},
    "outputs": [],
@@ -326,11 +343,184 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "dbbaba0e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lda = LatentDirichletAllocation(\n",
+    "    n_components=n_topics,\n",
+    "    max_iter=5,\n",
+    "    learning_method=\"online\",\n",
+    "    learning_offset=50,\n",
+    "    random_state=0\n",
+    ")\n",
+    "lda.fit(matrix_tf)\n",
+    "plot_top_words(lda,features_names, n_top_words, \"Topics in LDA\", size)\n",
+    "plot_documents(lda, matrix_tf,n_topics, \"Topics in LDA\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "308b07b2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nmf_fn = NMF(\n",
+    "    n_components=n_topics,\n",
+    "    random_state=1,\n",
+    "    alpha_H=.00005,\n",
+    "    alpha_W=.00005,\n",
+    "    l1_ratio=.5\n",
+    ")\n",
+    "nmf_fn.fit(matrix_tfidf)\n",
+    "plot_top_words(nmf_fn,features_names, n_top_words, \"Topics in nmf\", size)\n",
+    "plot_documents(nmf_fn, matrix_tfidf,n_topics, \"Topics in nmf\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "16543eeb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nmf_kl = NMF(\n",
+    "    n_components=n_topics,\n",
+    "    random_state=1,\n",
+    "    alpha_H=.00005,\n",
+    "    alpha_W=.00005,\n",
+    "    l1_ratio=.5,\n",
+    "    beta_loss='kullback-leibler',\n",
+    "    solver='mu',\n",
+    "    max_iter=1000\n",
+    ")\n",
+    "nmf_kl.fit(matrix_tfidf)\n",
+    "plot_top_words(nmf_kl,features_names, n_top_words, \"Topics in nmf(kl)\", size)\n",
+    "plot_documents(nmf_kl, matrix_tfidf,n_topics, \"Topics in nmf(kl)\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "38b52034",
    "metadata": {},
    "source": [
     "### clstrn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "be37525f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_dendrogram(model, **kwargs):\n",
+    "    counts = np.zeros(model.children_.shape[0])\n",
+    "    n_samples = len(model.labels_)\n",
+    "    for i, merge in enumerate(model.children_):\n",
+    "        current_count = 0\n",
+    "        for child_idx in merge:\n",
+    "            if child_idx < n_samples:\n",
+    "                current_count += 1 \n",
+    "            else:\n",
+    "                current_count += counts[child_idx - n_samples]\n",
+    "        counts[i] = current_count\n",
+    "\n",
+    "    linkage_matrix = np.column_stack(\n",
+    "        [model.children_, model.distances_, counts]\n",
+    "    ).astype(float)\n",
+    "    # Plot the corresponding dendrogram\n",
+    "    dendrogram(linkage_matrix, **kwargs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "bc96a71d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cs = cosine_similarity(matrix_tfidf, matrix_tfidf).flatten().reshape(matrix_tfidf.shape[0], matrix_tfidf.shape[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "00055350",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 5 0 0 4 0 0 3 3 3 1 1 1 1 1 1 1 1 2 2 2 2 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "clustering_cs_ward = AgglomerativeClustering(\n",
+    "    n_clusters=6,\n",
+    "    metric='euclidean',\n",
+    "    linkage=\"ward\",\n",
+    "    compute_distances=True\n",
+    ")\n",
+    "clustering_cs_ward.fit(cs)\n",
+    "print(clustering_cs_ward.labels_)\n",
+    "plot_dendrogram(\n",
+    "    clustering_cs_ward,\n",
+    "    labels = files_names, \n",
+    "    truncate_mode = 'level',\n",
+    "    orientation = 'right'\n",
+    ")\n",
+    "plt.savefig(\"./clustering/cs_ward.png\")\n",
+    "plt.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "57ad9da0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ed = euclidean_distances(matrix_tf, matrix_tf).flatten().reshape(matrix_tf.shape[0], matrix_tf.shape[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "563bec0c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 0 0 0 3 4 0 1 1 1 2 2 2 2 2 2 2 2 5 5 5 5 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "clustering_ed_complete = AgglomerativeClustering(\n",
+    "    n_clusters=6,\n",
+    "    metric='precomputed',\n",
+    "    linkage='complete',\n",
+    "    compute_distances=True\n",
+    ")\n",
+    "clustering_ed_complete.fit(ed)\n",
+    "print(clustering_ed_complete.labels_)\n",
+    "plot_dendrogram(\n",
+    "    clustering_ed_complete,\n",
+    "    labels = files_names, \n",
+    "    truncate_mode = 'level',\n",
+    "    orientation = 'right'\n",
+    ")\n",
+    "plt.savefig(\"./clustering/cs_ward.png\")\n",
+    "plt.close()"
    ]
   },
   {
@@ -340,6 +530,44 @@
    "source": [
     "### N-grs"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "bb950b2d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "documents_tokenized = {}\n",
+    "for key in documents:\n",
+    "    documents_tokenized[key] = word_tokenize(documents[key],language='english')\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "af0862fa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n = 3\n",
+    "tokens = 5\n",
+    "for n in range(1,4):\n",
+    "    for title in documents_tokenized:\n",
+    "        n_gram = pd.Series(ngrams(documents_tokenized[title], n)).value_counts()\n",
+    "        n_gram[:tokens].plot.barh()\n",
+    "        plt.savefig(f\"./ngrams/{n}_{title}.png\")\n",
+    "        plt.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "308e2809",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
